# BranchToolVR

./: .gitignore  README.md
BranchToolVR/: AbstractBaseObject.h  Axis.cpp  Axis.h  BlankScene.blend  BranchToolVR.vcxproj  BranchToolVR.vcxproj.filters  CoarseDicomViewer.cpp  CoarseDicomViewer.h  ColorObject.cpp  ColorObject.h  Constants.h  Curve.cpp  Curve.h  CurveTree.cpp  CurveTree.h  DicomObjectsContainer.cpp  DicomObjectsContainer.h  DicomPointCloudObject.cpp  DicomPointCloudObject.h  DicomReader.cpp  DicomReader.h  Engine.cpp  Engine.h  InputHelpers.h  LeastSquaresFit.cpp  LeastSquaresFit.h  Render.cpp  Render.h  Texture.cpp  Texture.h  TextureObject.cpp  TextureObject.h  Ui.h  base.blend  blender_bezier_gen.py  blender_bezier_tree.py  blender_import_data.py  blender_import_hex_mesh.py  colors  hexmesh  (+15 more)
BranchToolVR/Libraries/imebra/: license_gpl.txt
BranchToolVR/Libraries/imebra/examples/dicom2jpeg/: CMakeLists.txt  dicom2jpeg.cpp  dicom2jpeg.pro
BranchToolVR/Libraries/imgui/: imgui.cpp  imgui_demo.cpp
BranchToolVR/Resources/CT_H_50/: CT1.2.840.113704.1.111.1040.1476195207.2420.dcm  CT1.2.840.113704.1.111.1040.1476195212.2421.dcm  CT1.2.840.113704.1.111.1040.1476195213.2422.dcm  CT1.2.840.113704.1.111.1040.1476195213.2423.dcm  CT1.2.840.113704.1.111.1040.1476195213.2424.dcm  CT1.2.840.113704.1.111.1040.1476195213.2425.dcm  (+116 more)
BranchToolVR/Shaders/: branch_point.vs.glsl  color.vs.glsl  curve.fs.glsl  curve.vs.glsl  dicom_point_cloud.fs.glsl  dicom_point_cloud.vs.glsl
BranchToolVR/pointCloudSkinner/: 54 TestBentch_t26.blend
(+1468 files in other folders)
